# pyflow_acdc

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  LICENSE.txt  README.md  README.md.txt  pyproject.toml  setup.py
Cable_database/: ABB_Al_XLPE_800mm2_30kV.yaml
docs/: api.rst  citing.rst  conf.py  index.rst  installation.rst  refs.rst  requirements.txt  usage.rst
example_grids/: case39.py
examples/: CrigeB4_OPF_Main.py  MATACDC_PF_main.py  Princess Elizabeth Island.html  Princess_Elisabeth  Princess_Elisabeth.py
pyflow_acdc/: ACDC_Dynamic_TEP.py  ACDC_MP_TEP.py  ACDC_OPF.py  ACDC_OPF_L_model.py  ACDC_OPF_NL_model.py  ACDC_OPF_model.py  ACDC_PF.py  ACDC_Static_TEP.py  ACDC_TEP.py  ACDC_TEP_pymoo.py  AC_L_CSS_gurobi.py  AC_L_CSS_ortools.py  AC_OPF_L_model.py  Array_OPT.py  Class_editor.py  Classes.py  Export_files.py  Graph_Dash.py  Graph_and_plot.py  Grid_creator.py  MIP_graph_array.py  Mapping.py  Market_Coeff.py  PyFlow_ACDC.py  PyFlow_ACDC_Class.py  PyFlow_ACDC_Elements.py  PyFlow_ACDC_GraphsPlot.py  PyFlow_ACDC_OPF.py  PyFlow_ACDC_PF.py  PyFlow_ACDC_TS.py  PyFlow_ACDC_exportfiles.py  Results.py  Results_class.py  Time_series.py  Time_series_clustering.py  __init__.py
pyflow_tests/: CigreB4_OPF.py  CigreB4_PF.py  DC_OPF.py  MATACDC_PF_main.py  array_sizing.py  case24_3zones_acdc_OPF.py  case24_OPF.py  case24_REC.py  case24_TEP.py  case39_acdc_var.mat  case39_var.mat  case39ac_LOPF.py  case39ac_OPF.py  case39acdc_OPF.py  case6_TEP_DC.py  folium_test.py  grid_creation.py  matlab_loader.py  run_tests.py  sequential_array.py  test_docs_add_components.py  (+5 more)
(+754 files in other folders)
